Added Angular File for Restaurant App

--- a/restaurant-angular/src/app/admin/add-category/add-category.component.html
+++ b/restaurant-angular/src/app/admin/add-category/add-category.component.html
@@ -3,15 +3,36 @@
     <div nz-row class="imgDiv">
       <h2 style="margin-left: 200px;">Add Category</h2>
     </div>
-    <form nz-form>
+    <form nz-form [formGroup] = "categoryForm" (ngSubmit)="postCategory()">
       <div nz-row>
-      <div nz-col [nzMd]="24" [nzSm]="24" [nzSm]="24">
-        <div class="profile-badge">
-          
+        <div nz-col [nzMd]="24" [nzSm]="24" [nzSm]="24">
+          <div class="profile-badge">
+            <label for="upload_profile_image" class="upload-label" *ngIf="selectedFile">
+              <img class="profile" alt="profile" [src]="imagePreview">
+            </label>
+            <input type="file" nz-button nzType="primary" id="upload_profile_image" 
+            accept="image/x-png,image/gif,image/jpeg"
+            (change)="onFileSelected($event)">
+            <button nz-button nzShape="circle"></button>
+          </div>
         </div>
       </div>
+      <div nz-col nzSpan="24" style="margin-top: 20px;">
+        <nz-form-item>
+          <nz-form-control nzHasFeedback [nzXs]="24" nzErrorTip="This input is required!">
+            <input nz-input placeholder="Name" formControlName="name"/>
+          </nz-form-control>
+        </nz-form-item>
       </div>
+
+      <div nz-col nzSpan="24">
+        <nz-form-item>
+          <nz-form-control nzHasFeedback [nzXs]="24" nzErrorTip="This input is required!">
+            <textarea rows="1" nz-input placeholder="Description" formControlName="description"></textarea>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <button nz-button type="submit" class="login-form-btn login-form-margin" [nzType]="'primary'">Post</button>
     </form>
   </div>
-
 </div>
