--- a/restaurant-angular/src/app/customer/view-products/view-products.component.html
+++ b/restaurant-angular/src/app/customer/view-products/view-products.component.html
@@ -4,23 +4,22 @@
     <input nz-input placeholder="Enter Keyword to search" nzSize="large" style="width: 20%;" #filter (keyup)="onInputChange(filter.value)"/>
     <button nz-button [nzSize]="size" nzType="primary" style="margin-left: 15px;" [disabled]="filter.value == ''" (click)="filterResults(filter.value)">Search</button>
   </div>
-  <div style="margin-top: 10px;" class="child" *ngFor="let category of filteredCategories">
+  <div style="margin-top: 10px;" class="child" *ngFor="let product of filteredProducts">
     <div nz-row>
       <div nz-col nzSpan="8">
         <img class="profile" style="height: 130px; width: 200px; border-radius: 10px;" alt="profile"
-          [src]="category.processedImg">
+          [src]="product.processedImg">
       </div>
       <div nz-col nzSpan="16">
         <h2 style="cursor: pointer; color: #108ee9;">
-          {{category.name}}
+          {{product.name}}
         </h2>
         <hr>
-        <h5>Description: <b>{{category.description}}</b></h5>
+        <h5>Price: <b>${{product.price}}</b>
+          - Desciption: <b>{{product.description}}</b>
+          - Category: <b>{{product.categoryName}}</b>
+        </h5>
         <hr>
-        <div style="float: right;">
-          <button nzSize="small" nz-button nzType="primary" routerLink="/customer/{{category.id}}/products">View
-            Products</button>
-        </div>
       </div>
     </div>
   </div>
