--- a/restaurant-angular/src/app/admin/dashboard/dashboard.component.html
+++ b/restaurant-angular/src/app/admin/dashboard/dashboard.component.html
@@ -1,1 +1,29 @@
-<p>admin works!</p>
+<input nz-input placeholder="Enter Keyword to search" nzSize="large" style="width: 20%;" #filter (keyup)="onInputChange(filter.value)"/>
+<button nz-button [nzSize]="size" nzType="primary" style="margin-left: 15px;" [disabled]="filter.value == ''" (click)="filterResults(filter.value)">Search</button>
+
+<div style="background-color: #f8f8f8; min-height: 91vh;">
+  <div style="padding-top: 10px;"></div>
+
+  <div style="margin-top: 10px;" class="child" *ngFor="let category of filteredCategories">
+    <div nz-row>
+      <div nz-col nzSpan="8">
+        <img class="profile" style="height: 130px; width: 200px; border-radius: 10px;" alt="profile"
+          [src]="category.processedImg">
+      </div>
+      <div nz-col nzSpan="16">
+        <h2 style="cursor: pointer; color: #108ee9;">
+          {{category.name}}
+        </h2>
+        <hr>
+        <h5>Description: <b>{{category.description}}</b></h5>
+        <hr>
+        <div style="float: right;">
+          <button nzSize="small" nz-button nzType="primary" routerLink="/admin/{{category.id}}/products">View
+            Products</button>
+          <button style="margin-left: 10px;" nzSize="small" nz-button nzType="primary"
+            routerLink="/admin/{{category.id}}/product">Post Product</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
