--- a/restaurant-angular/src/app/app.component.html
+++ b/restaurant-angular/src/app/app.component.html
@@ -1,39 +1,28 @@
-<div *ngIf="!isAdminLoggedIn && !isCustomerLoggedIn">
-  <nz-header class="main-header" nz-row nzType="flex" style="background-color: #003973;">
+<div>
+  <nz-header class="main-header" nz-row nzType="flex" style="background-color: #003973; padding-left: 0px;">
     <div>
-      <a style="color: white; margin-left: 50px; font-size: 18px; font-weight: bolder;" 
-        routerLink="/login">Restaurant System</a>
+      <img alt="Logo" src="assets/Restaurant_Logo.jpg" style="width: 100px; height: 80px;">
+      <a style="color: white;margin-left: 20px;font-size: 25px;font-weight: bolder;" 
+        routerLink="/login">RESTAURANT MANAGEMENT APP</a>
     </div>
-    <div class="nav-links">
+    <div class="nav-links" *ngIf="!isAdminLoggedIn && !isCustomerLoggedIn">
       <a nz-button nzType="link" routerLink="/register" routerLinkActive="active">Sign Up</a>
       <a nz-button nzType="link" routerLink="/login" routerLinkActive="active">Login</a>
     </div>
-  </nz-header>
-</div>
-<!-- ADMIN MENU -->
-<div *ngIf="isAdminLoggedIn" >
-  <nz-header class="main-header" nz-row nzType="flex" style="background-color: #003973;">
-    <div>
-      <a style="color: white; margin-left: 50px; font-size: 18px; font-weight: bolder;" 
-        routerLink="/admin/dashboard">Restaurant System</a>
-    </div>
-    <div class="nav-links">
+
+    <!-- ADMIN MENU -->
+    <div class="nav-links" *ngIf="isAdminLoggedIn">
       <a nz-button nzType="link" routerLink="/admin/dashboard" routerLinkActive="active">Dashboard</a>
       <a nz-button nzType="link" routerLink="/admin/category" routerLinkActive="active">Category</a>
+      <a nz-button nzType="link" routerLink="/admin/reservations" routerLinkActive="active">Reservations</a>
       <a nz-button nzType="link" routerLink="/login" routerLinkActive="active" (click)="logOut()">Logout</a>
     </div>
-  </nz-header>
-</div>
 
-<!-- CUSTOMER MENU -->
-<div *ngIf="isCustomerLoggedIn">
-  <nz-header class="main-header" nz-row nzType="flex" style="background-color: #003973;">
-    <div>
-      <a style="color: white; margin-left: 50px; font-size: 18px; font-weight: bolder;" 
-        routerLink="/customer/dashboard">Restaurant System</a>
-    </div>
-    <div class="nav-links">
+    <!-- CUSTOMER MENU -->
+    <div class="nav-links" *ngIf="isCustomerLoggedIn">
       <a nz-button nzType="link" routerLink="/customer/dashboard" routerLinkActive="active">Dashboard</a>
+      <a nz-button nzType="link" routerLink="/customer/reservation" routerLinkActive="active">Reservation</a>
+      <a nz-button nzType="link" routerLink="/customer/view-reservations" routerLinkActive="active">Reservations</a>
       <a nz-button nzType="link" routerLink="/login" routerLinkActive="active" (click)="logOut()">Logout</a>
     </div>
   </nz-header>
