--- a/restaurant-angular/src/app/customer/view-products/view-products.component.scss
+++ b/restaurant-angular/src/app/customer/view-products/view-products.component.scss
@@ -53,11 +53,8 @@ h2:hover{
   text-decoration-line: underline;
 }
 
-.pagination {
-  width: 780px;
-  border-radius: 5px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 20px;
-  margin-top: 20px;
+.search-bar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
